[build-dependencies]
substrate-wasm-builder = { version = "4.0.0" }

[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'bitcountry-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
smallvec = "1.4.0"
serde = { version = "1.0.101", optional = true, default-features = false }
serde_json = "1.0.60"
hex = { version = "0.4", default-features = false, optional = true }
hex-literal = { version = "0.3.1" }
evm = { version = "0.20.0", optional = true, default-features = false }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }

pallet-authorship = { version = '3.0.0', default-features = false }
pallet-babe = { version = '3.0.0', default-features = false }
pallet-balances = { version = '3.0.0', default-features = false }
pallet-collective = { version = '3.0.0', default-features = false }
pallet-contracts = { version = '3.0.0', default-features = false }
pallet-contracts-primitives = { version = '3.0.0', default-features = false }
pallet-contracts-rpc-runtime-api = { version = '3.0.0', default-features = false }
pallet-grandpa = { version = '3.0.0', default-features = false }
pallet-indices = { version = '3.0.0', default-features = false }
pallet-membership = { version = '3.0.0', default-features = false }
pallet-randomness-collective-flip = { version = '3.0.0', default-features = false }
pallet-session = { version = '3.0.0', features = ["historical"], default-features = false }
pallet-staking = { version = '3.0.0', default-features = false }
pallet-staking-reward-curve = { version = '3.0.0', default-features = false }
pallet-sudo = { version = '3.0.0', default-features = false }
pallet-timestamp = { version = '3.0.0', default-features = false }
pallet-transaction-payment = { version = '3.0.0', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = '3.0.0', default-features = false }
pallet-treasury = { version = '3.0.0', default-features = false }
pallet-bounties = { version = '3.0.0', default-features = false }
pallet-utility = { version = '3.0.0', default-features = false }
pallet-offences = { version = '3.0.0', default-features = false }
pallet-multisig = { version = '3.0.0', default-features = false }
sp-api = { version = '3.0.0', default-features = false }
sp-block-builder = { version = '3.0.0', default-features = false }
sp-consensus-babe = { version = '0.9.0', default-features = false }
sp-consensus-aura = { version = '0.9.0', default-features = false }
sp-core = { version = '3.0.0', default-features = false }
sp-inherents = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
sp-offchain = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
sp-session = { version = '3.0.0', default-features = false }
sp-staking = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }
sp-arithmetic = { version = '3.0.0', default-features = false }
sp-transaction-pool = { version = '3.0.0', default-features = false }
sp-version = { version = '3.0.0', default-features = false }
sp-application-crypto = { version = '3.0.0', default-features = false }

# Bit.Country primitives
primitives = { package = "bit-country-primitives", path = "../pallets/primitives", default-features = false }

# Orml pacakges
orml-traits = { default-features = false }
orml-currencies = { default-features = false }
orml-tokens = { default-features = false }
# oracle = {version = "1.0.0", path = "../pallets/oracle", default_features= false}

[dependencies.unique-asset]
default-features = false
package = 'pallet-unique-asset'
path = '../pallets/uniqueAsset'
version = '2.0.0-rc6'

[dependencies.country]
default-features = false
package = 'pallet-country'
path = '../pallets/country'
version = '2.0.0-rc6'

[dependencies.block]
default-features = false
package = 'pallet-block'
path = '../pallets/block'
version = '2.0.0-rc6'

[dependencies.section]
default-features = false
package = 'pallet-section'
path = '../pallets/section'
version = '2.0.0-rc6'

[dependencies.tokenization]
default-features = false
package = 'pallet-tokenization'
path = '../pallets/tokenization'
version = '2.0.0-rc6'

[dependencies.nft]
default-features = false
package = 'pallet-nft'
path = '../pallets/nft'
version = '2.0.0-rc6'

[dependencies.auction]
default-features = false
package = 'pallet-auction'
path = '../pallets/auction'
version = '2.0.0-rc6'


[dependencies.xcm-adapter]
default-features = false
package = 'xcm-adapter'
path = '../pallets/xcm-adapter'
version = '0.1.0'

[features]
default = ["std"]
no_std = []
std = [
  	"codec/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",

	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-benchmarking/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-randomness-collective-flip/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-bounties/std",
	"pallet-utility/std",
	"pallet-offences/std",
	"pallet-multisig/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-consensus-aura/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-arithmetic/std",
	"sp-transaction-pool/std",

    'orml-currencies/std',
    'orml-tokens/std',
    'unique-asset/std',
    'country/std',
    'block/std',
    'section/std',
    'nft/std',
    'auction/std',
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    # "oracle/std",
]

# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
standalone = []