[build-dependencies]
substrate-wasm-builder = { version = "3.0.0" }

[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'bitcountry-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
smallvec = "1.4.0"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true, default-features = false }
serde_json = "1.0.60"
hex = { version = "0.4", default-features = false, optional = true }
hex-literal = { version = "0.3.1" }
evm = { version = "0.20.0", optional = true, default-features = false }

frame-executive = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", features = ["historical"], default-features = false }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "master", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "master", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "master", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "master", default-features = false }

# Bit.Country primitives
primitives = { package = "bit-country-primitives", path = "../pallets/primitives", default-features = false }

# Orml pacakges
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master" }
orml-currencies = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master" }
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master" }
orml-xtokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master" }
orml-nft = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master" }
orml-xcm-support = { default-features = false, package = 'orml-xcm-support', path = '../pallets/xcm-support' }
orml-unknown-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master" }
# oracle = {version = "1.0.0", path = "../pallets/oracle", default_features= false}

country = { default-features = false, package = 'pallet-country', path = '../pallets/country' }
block = { default-features = false, package = 'pallet-block', path = '../pallets/block' }
section = { default-features = false, package = 'pallet-section', path = '../pallets/section' }
tokenization = { default-features = false, package = 'pallet-tokenization', path = '../pallets/tokenization' }
nft = { default-features = false, package = 'pallet-nft', path = '../pallets/nft' }
auction = { default-features = false, package = 'pallet-auction', path = '../pallets/auction' }


[features]
default = ["std"]
no_std = []
std = [
    "codec/std",
    "serde",
    "sp-core/std",
    "sp-io/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-version/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "frame-benchmarking/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "pallet-collective/std",
    "pallet-grandpa/std",
    "pallet-indices/std",
    "pallet-membership/std",
    "pallet-randomness-collective-flip/std",
    "pallet-staking/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-treasury/std",
    "pallet-bounties/std",
    "pallet-utility/std",
    "pallet-offences/std",
    "pallet-multisig/std",
    "sp-block-builder/std",
    "sp-consensus-babe/std",
    "sp-consensus-aura/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-arithmetic/std",
    "sp-transaction-pool/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-primitives-core/std",
    "parachain-info/std",
    "polkadot-parachain/std",
    "xcm/std",
    "xcm-executor/std",
    "xcm-builder/std",
    "cumulus-pallet-xcm/std",
    'orml-xcm-support/std',
    'orml-currencies/std',
    'orml-tokens/std',
    'orml-xtokens/std',
    'orml-nft/std',
    'country/std',
    'block/std',
    'section/std',
    'nft/std',
    'auction/std',
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    # "oracle/std",
]

# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
standalone = []
