[package]
authors = ['Bit.Country Developers <https://github.com/bit.country>']
edition = '2018'
homepage = 'https://bit.country'
license = 'Unlicense'
name = 'bitcountry-runtime'
repository = 'https://github.com/bit.country/Bit-Country-Blockchain'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
pallet-aura = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
pallet-collective = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
pallet-grandpa = { version = "3.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
pallet-sudo = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
pallet-treasury = { version = "3.0.0", default-features = false }
pallet-bounties = { version = "3.0.0", default-features = false }
pallet-tips = { version = "3.0.0", default-features = false }
frame-executive = { version = "3.0.0", default-features = false }
serde = { version = "1.0.124", optional = true, features = ["derive"] }
sp-api = { version = "3.0.0", default-features = false }
sp-block-builder = { version = "3.0.0", default-features = false }
sp-consensus-aura = { version = "0.9.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-inherents = { version = "3.0.0", default-features = false }
sp-offchain = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-session = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-transaction-pool = { version = "3.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }

# Orml pacakges
orml-currencies = { default-features = false, version = '0.4.0' }
orml-tokens = { default-features = false, version = '0.4.0' }
orml-traits = { default-features = false, version = '0.4.0' }
orml-nft = { default-features = false, version = '0.4.0' }

# Contracts specific packages
pallet-contracts = { version = "3.0.0", default_features = false }
pallet-contracts-primitives = { version = "3.0.0", default_features = false }
pallet-contracts-rpc-runtime-api = { version = "3.0.0", default-features = false }
oracle = { version = "1.0.0", path = "../pallets/oracle", default_features = false }

primitives = { package = "bit-country-primitives", path = "../pallets/primitives", default-features = false }
auction-manager = { package = "auction-manager", path = "../pallets/auction-manager", version = '2.0.0-rc6', default-features = false }
country = { package = "pallet-country", path = "../pallets/bitcountry", version = '2.0.0-rc6', default-features = false }
block = { package = "pallet-block", path = "../pallets/block", version = '2.0.0-rc6', default-features = false }
tokenization = { package = "pallet-tokenization", path = "../pallets/tokenization", version = '2.0.0-rc6', default-features = false }
nft = { package = "pallet-nft", path = "../pallets/nft", version = '2.0.0-rc6', default-features = false }
continuum = { package = "pallet-continuum", path = "../pallets/continuum", version = '0.0.1', default-features = false }
auction = { package = "pallet-auction", path = "../pallets/auction", version = '2.0.0-rc6', default-features = false }

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'serde',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-collective/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-treasury/std',
    'pallet-bounties/std',
    'pallet-tips/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'primitives/std',
    'auction-manager/std',
    'orml-currencies/std',
    'orml-tokens/std',
    'orml-nft/std',
    'country/std',
    'auction/std',
    'block/std',
    'nft/std',
    'continuum/std',
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    "oracle/std"
]

# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
