[package]
authors = ['Metaverse Network <https://github.com/bit-country>']
description = 'Metaverse Network pallet bridge token and nft transfer.'
edition = '2021'
homepage = 'https://metaverse.network'
license = 'Unlicense'
name = 'modules-bridge'
repository = 'https://github.com/bit-country'
version = '0.0.1'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
serde = { version = "1.0.137", optional = true }
hex = { version = "0.4", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
# primitives
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }
core-primitives = { path = "../../traits/core-primitives", default-features = false }
orml-traits = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.26", default-features = false }

[dev-dependencies]
blake2-rfc = { version = "0.2.18", default-features = false }
hex-literal = "0.3"
pallet-nft = { path = "../../pallets/nft", default-features = false }
orml-nft = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.26-1", version = "0.4.2-dev", default-features = false }
orml-tokens = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.26", default-features = false }
currencies = { package = "currencies", path = "../../pallets/currencies", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
auction-manager = { default-features = false, package = 'auction-manager', path = '../../traits/auction-manager' }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "sp-arithmetic/std",
    "frame-support/std",
    "frame-system/std",
    "primitives/std",
    "core-primitives/std",
    "orml-traits/std",
    "orml-nft/std",
    "pallet-nft/std",
    "currencies/std",
    "orml-tokens/std",
    "pallet-balances/std",
    "auction-manager/std"
]
