[package]
name = "module-relaychain"
version = "2.0.0-rc6"
edition = "2021"

[dependencies]
serde = { workspace = true, optional = true }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }
sp-runtime = { workspace = true }
sp-std = { workspace = true}
frame-support = { workspace = true }
frame-system = { workspace = true }
module-support = { path = "../support", default-features = false }
primitives = { package = 'bit-country-primitives', path = '../../primitives/metaverse', default-features = false }
xcm = { workspace = true }
cumulus-primitives-core = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true }

[features]
default = ["std"]
#kusama = []
polkadot = []
#with-pioneer-runtime = []
#with-metaverse-runtime = []
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "module-support/std",
    "primitives/std",
    "xcm/std",
    "cumulus-primitives-core/std",
]
try-runtime = ["frame-support/try-runtime"]
