[package]
name = "asset-manager"
authors = ['Metaverse Network <https://github.com/bit-country>']
description = 'Metaverse Network pallet for asset management.'
edition = '2021'
homepage = 'https://metaverse.network'
repository = 'https://github.com/bit-country'
version = '0.1.0'


[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0.124", optional = true }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false  }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "log/std",
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "primitives/std",
    "xcm/std",
]